src/css/style.css
*{
    padding:0;
    margin:0;
}
h1,p{
    text-align: center;
    margin-left: 80px;
    margin-top: 5px;
    width: 100%;
    
}
.user-form {    margin-left: 400px;
    display: inline-block;}
.user-form .field { 
 
    width: 400px;
    margin-left: 20%;}

.user-form .field input { display: inline-block;
    width: 100%;
    padding:9px; 
    text-indent: 40px;
}
button{
    padding: 10px;
    width: 420px;
    background:#ffb258;
    display: inline-block;
    border:0;
    font-weight:bold;
    font-size:20px;
}
section{
    text-align:center;
    float:right;
}
i{
    position: relative;
    top: 28px;
    left: 10px;
}
.errorText{
    background: red;
    width: 100%;
    padding: 10px;
    text-align:left;
    margin:2px 0 2px 20%;
    color:#ffffff;

}
.fa-warning{
    float:right;
    color:red
}

@media  (min-width:320px) and (max-width:748px){

    h1,p{
        text-align: center;
        margin-left: 80px;
        margin-top: 5px;
        width: 100%;
        
    }
    .user-form {    margin-left: 400px;
        display: inline-block;}
    .user-form .field { 
     
        width: 400px;
        margin-left: 20%;}
    
    .user-form .field input { display: inline-block;
        width: 100%;
        padding:9px; 
        text-indent: 40px;
    }
    button{
        padding: 10px;
        width: 420px;
        background:#ffb258;
        display: inline-block;
        border:0;
        font-weight:bold;
        font-size:20px;
    }
    section{
        text-align:center;
        float:right;
    }
    i{
        position: relative;
        top: 28px;
        left: 10px;
    }
    .errorText{
        background: red;
        width: 100%;
        padding: 10px;
        text-align:left;
        margin:2px 0 2px 20%;
        color:#ffffff;
    
    }
    .fa-warning{
        float:right;
        color:red
    }

}

